# ya-negotiator

./: .gitignore  Cargo.toml  readme.md
agreement-utils/: Cargo.toml
agreement-utils/src/: agreement.rs  constraints.rs  lib.rs  proposal.rs  template.rs  typed_props.rs
builtin-negotiators/: Cargo.toml
builtin-negotiators/src/: accept_all.rs  expiration.rs  lib.rs  max_agreements.rs
examples/dll-negotiator/: Cargo.toml
examples/dll-negotiator/src/: lib.rs
examples/grpc-example/: Cargo.toml
examples/grpc-example/src/: emit_errors.rs  filter_nodes.rs  lib.rs  main.rs
interfaces/grpc/: Cargo.toml  build.rs
interfaces/grpc/src/: actor.rs  component.rs  factory.rs  grpc.rs  grpc_negotiator.proto  lib.rs  message.rs  server.rs
interfaces/shared-lib/: Cargo.toml
interfaces/shared-lib/src/: component.rs  interface.rs  lib.rs  plugin.rs
negotiator-component/: Cargo.toml
negotiator-component/src/: chain.rs  component.rs  component_mut.rs  lib.rs  pack.rs  reason.rs  static_lib.rs
src/: collection.rs  composite.rs  factory.rs  lib.rs  negotiators.rs  shared_lib.rs
testing/: Cargo.toml
testing/sample-negotiators/: Cargo.toml
testing/sample-negotiators/src/: configs.rs  emit_errors.rs  filter_nodes.rs  lib.rs
testing/src/: error.rs  framework.rs  lib.rs  negotiation_record.rs  node.rs  provider.rs  requestor.rs  test_directory.rs
tests/: test_grpc_library.rs  test_negotiations.rs  test_requestor_provider_flow.rs  test_shared_library.rs  test_static_library.rs
tests/assets/: agreement.json
