[package]
name = "ya-negotiators"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"


[workspace]
members = [
    "negotiator-component",
    "agreement-utils",
    "builtin-negotiators",
    "interfaces/grpc",
    "testing",
    "examples/grpc-example"
]

[dependencies]
ya-agreement-utils = { path = "agreement-utils" }
ya-negotiator-component = { path = "negotiator-component" }
ya-builtin-negotiators = { path = "builtin-negotiators" }
ya-grpc-negotiator-api = { path = "interfaces/grpc"}

ya-client-model = "0.4"

actix = { version = "0.13" }
actix_derive = "0.6"
anyhow = "1.0"
derive_more = "0.99"
futures = "0.3"
humantime-serde = "1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }

[dev-dependencies]
chrono = "0.4"
actix-rt = "2.7"
env_logger = "0.9"

ya-negotiators-testing = { path = "testing" }

# Tests
test-binary = "2"

[patch.crates-io]
#ya-client-model = { git = "https://github.com/golemfactory/ya-client.git", rev = "a613ac3e13e8f38003efa66a4d11cfcbc8254520"}
