[package]
name = "ya-builtin-negotiators"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-client-model = "0.3"
ya-agreement-utils = { path = "../agreement-utils" }
ya-negotiator-component = { path = "../negotiator-component" }

anyhow = "1.0"
chrono = "0.4.10"
humantime = "2.0.0"
humantime-serde = "1.0.1"
log = "0.4"
log-derive = "0.4"
serde = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
