[package]
name = "ya-negotiator-component"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-agreement-utils = { path = "../agreement-utils" }
ya-client-model = "0.2"

anyhow = "1.0.31"
log = "0.4"
log-derive = "0.4"
serde = "1.0"
