[package]
name = "ya-negotiators-testing"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-agreement-utils = { path = "../agreement-utils" }
ya-negotiator-component = { path = "../negotiator-component" }
ya-builtin-negotiators = { path = "../builtin-negotiators" }
ya-negotiator-shared-lib-interface = { path = "../interfaces/shared-lib" }
ya-negotiators = { path = "../" }

ya-client-model = "0.2"

actix = { version = "0.10" }
anyhow = "1.0.31"
backtrace = "0.3"
chrono = "0.4.10"
derive_more = "0.99.11"
env_logger = "0.9.0"
futures = "0.3.12"
log = "0.4.14"
serde = "1.0"
serde_json = "1.0"
serde_with = "1.6.4"
thiserror = "1.0"
tokio = { version = "0.2.6", features = ["rt-core", "sync", "stream", "time"] }
#tokio-stream = { version = "0.1.3", features = ["sync"] }
rand = "0.7.2"

