[package]
name = "ya-negotiators-testing"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

[dependencies]
ya-agreement-utils = { path = "../agreement-utils" }
ya-negotiator-component = { path = "../negotiator-component" }
ya-builtin-negotiators = { path = "../builtin-negotiators" }
ya-negotiator-shared-lib-interface = { path = "../interfaces/shared-lib" }
ya-negotiators = { path = "../" }

ya-client-model = "0.5"

actix = { version = "0.13" }
anyhow = "1.0"
backtrace = "0.3"
chrono = "0.4"
derive_more = "0.99"
env_logger = "0.9"
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_with = "1.14"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }
tokio-stream = { version = "0.1.9", features = [] }
rand = "0.8"

