[package]
name = "dll-negotiator"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type=["rlib", "dylib"]

[dependencies]
ya-negotiator-shared-lib-interface = { path = "../../interfaces/shared-lib" }

anyhow = "^1.0"
