[package]
name = "dll-negotiator"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

[lib]
crate-type=["rlib", "dylib"]

[dependencies]
ya-negotiator-shared-lib-interface = { path = "../../interfaces/shared-lib" }

abi_stable = "0.9.1"
anyhow = "^1.0"
serde = "^1.0"
serde_yaml = "^0.8"

