[package]
name = "grpc-example"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2021"

[lib]
name = "grpc_example_lib"
path = "src/lib.rs"

[[bin]]
name = "grpc-example"
path = "src/main.rs"

[dependencies]
ya-grpc-negotiator-api = { path = "../../interfaces/grpc"}
ya-testing-examples = { path = "../../testing/sample-negotiators" }

actix-rt = "2.7"
anyhow = "1"
env_logger = "0.9"
log = "0.4"
serde = "1"
serde_yaml = "0.9"
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
