[package]
name = "ya-grpc-negotiator-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ya-agreement-utils = { path = "../../agreement-utils" }
ya-negotiator-component = { path = "../../negotiator-component" }
ya-client-model = "0.4"

actix = "0.13"
actix_derive = "0.6"
anyhow = "1.0"
clap = { version = "3", features = ["derive", "env"] }
derive_more = "0.99"
futures = "0.3"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.8"
prost = "0.11"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"

[build-dependencies]
tonic-build = "0.8"
protobuf-src = "1"
