[package]
name = "ya-negotiator-shared-lib-interface"
version = "0.1.0"
authors = ["nieznany.sprawiciel <witek@golem.network>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ya-agreement-utils = { path = "../../agreement-utils" }
ya-negotiator-component = { path = "../../negotiator-component" }
ya-client-model = "^0.2"

abi_stable = "0.9.1"
anyhow = "^1.0"
serde = "^1.0"
serde_json = "^1.0"
serde_yaml = "^0.8"
thiserror = "^1.0"
