[package]
name = "ya-testing-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
ya-client-model = "0.4"
ya-agreement-utils = { path = "../../agreement-utils" }
ya-negotiator-component = { path = "../../negotiator-component" }
ya-negotiators = { path = "../.." }
ya-negotiators-testing = { path = ".." }

anyhow = "1"
env_logger = "0.9"
log = "0.4"
serde = "1"
serde_yaml = "0.9"
serde_json = "1.0"
test-binary = "2"

